[project]
name = "srai"
version = "0.0.1"
description = "A set of python modules for geospatial machine learning and data mining"
authors = [{ name = "srai", email = "spatialrepresentationsforai@gmail.com" }]
# pdm add <library>
dependencies = [
    "pandas>=1.3",
    "geopandas>=0.11.1",
    "shapely>=1.8.5.post1",
    "h3>=4.0.0b1",
    "numpy>=1.23.4",
    "geoparquet>=0.0.3",
    "pyfunctional>=1.4.3",
    "rtree>=1.0.1",
    "scipy>=1.9.3",
    "pyarrow>=10.0.0",
    "topojson>=1.5",
    "tqdm>=4.64.1",
    "s2>=0.1.9",
    "typeguard>=3.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://srai-lab.github.io/srai"
Repository = "https://github.com/srai-lab/srai"
Documentation = "https://srai-lab.github.io/srai"
Changelog = "https://github.com/srai-lab/srai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# pdm add -G osm <library>
osm = ["osmium>=3.4.1", "osmnx>=1.2.2", "overpass>=0.7"]
# pdm add -G voronoi <library>
voronoi = ["pymap3d>=2.9.1", "haversine>=2.7.0", "spherical-geometry>=1.2.23"]
# pdm add -G gtfs <library>
gtfs = ["gtfs-kit>=5.0.0"]
# pdm add -G plotting <library>
plotting = ["folium>=0.14.0", "mapclassify>=2.5.0", "plotly>=5.10.0", "kaleido==0.2.1"]
# pdm add -G torch <library>
torch = ["pytorch-lightning>=1.0.0", "torch"]
all = ["srai[osm,voronoi,gtfs,plotting,torch]"]


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
# pdm add -d <library>
dev = ["bumpver>=2022.1118"]
# pdm add -dG lint <library>
lint = [
    "pre-commit~=2.20",
    "black[jupyter]>=22.10.0",
    "mypy~=0.982",
    "docformatter[tomli]>=1.5.0",
    "ruff>=0.0.259",
]
# pdm add -dG test <library>
test = [
    "pytest~=7.1",
    "tox-pdm>=0.6.0",
    "pytest-mock>=3.0.0",
    "requests-mock>=1.10.0",
    "pytest-check>=2.1.4",
    "pytest-parametrization>=2022.2.1",
    "pytest-xdist>=3.2.1",
]
# pdm add -dG visualization <library>
visualization = [
    "keplergl>=0.3.2",
    "matplotlib>=3.6.1",
]
# pdm add -dG docs <library>
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.6",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mkdocstrings[python]>=0.19.0",
    "mkdocs-jupyter>=0.22.0",
    "ipykernel>=6.16.0",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mike<2.0.0",
]
performance = ["scalene>=1.5.14"]
license = ["licensecheck>=2023.0.1"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
preview = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "UP",           # pyupgrade
    "D",            # pydocstyle
    "I",            # isort
    "B",            # flake8-bugbear
    "NPY",          # NumPy
    "YTT",          # flake8-2020
    "Q",            # flake8-quotes
    "PLE", "PLW",   # pylint (add "PLR" in the future)
    "PIE",          # misc lints
    "TID",          # tidy imports
    "ISC",          # implicit string concatenation
    "TCH",          # type-checking imports
    # "N",            # pep8-naming
    # "ANN",          # flake8-annotations
]
ignore = ["D212"]
extend-exclude = [
    "old",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 100

[tool.mypy]
strict = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true

[tool.docformatter]
syntax = 'google'
black = true
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
# force-wrap = false # uncomment after https://github.com/PyCQA/docformatter/issues/68 is resolved
tab-width = 4
blank = false
pre-summary-newline = true
close-quotes-on-newline = true
wrap-one-line = true

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "chore: bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
log_cli = true

[tool.licensecheck]
using = "requirements"
zero = false
ignore_licenses = ["UNKNOWN"]
ignore_packages = [
    'srai',                     # skip self
    'scalene',                  # uses Apache-2.0 license, takes time to analyse
    'docformatter',             # uses MIT license, has mismatched license in analysis
    'pymap3d',                  # uses BSD-2 license, has mismatched license in analysis
    'mkdocs-jupyter',           # uses Apache-2.0 license, has mismatched license in analysis
    'nvidia-cublas-cu11',       # uses NVIDIA license
    'nvidia-cuda-cupti-cu11',   # uses NVIDIA license
    'nvidia-cuda-nvrtc-cu11',   # uses NVIDIA license
    'nvidia-cuda-runtime-cu11', # uses NVIDIA license
    'nvidia-cudnn-cu11',        # uses NVIDIA license
    'nvidia-cufft-cu11',        # uses NVIDIA license
    'nvidia-curand-cu11',       # uses NVIDIA license
    'nvidia-cusolver-cu11',     # uses NVIDIA license
    'nvidia-cusparse-cu11',     # uses NVIDIA license
    'nvidia-nccl-cu11',         # uses NVIDIA license
    'nvidia-nvtx-cu11',         # uses NVIDIA license
]
