[project]
name = "srai"
version = "0.9.7"
description = "A set of python modules for geospatial machine learning and data mining"
authors = [
    { name = "Piotr Gramacki", email = "pgramacki@kraina.ai" },
    { name = "Kacper Leśniara", email = "klesniara@kraina.ai" },
    { name = "Kamil Raczycki", email = "kraczycki@kraina.ai" },
    { name = "Szymon Woźniak", email = "swozniak@kraina.ai" },
]
# pdm add <library>
dependencies = [
    "pandas",
    "geopandas>=0.6",
    "shapely>=2.0.1",
    "h3>=4.0.0b1",
    "numpy>=1.26.0",
    "pyfunctional>=1.0.0",
    "pyarrow>=13.0.0",
    "topojson>=1.6",
    "tqdm>=4.42.0",
    "s2>=0.1.9",
    "typeguard>=3.0.0",
    "requests",
    "h3ronpy>=0.20.1",
    "osmnx>=1.3.0",
    "polars>=0.19.4",
    "duckdb>=1.2.0",
    "rq-geo-toolkit>=2025.8.4",
    "geoarrow-rust-core>=0.4.0",
    "geoarrow-pyarrow>=0.1.2",
    "pooch>=1.6.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://kraina-ai.github.io/srai"
Repository = "https://github.com/kraina-ai/srai"
Documentation = "https://kraina-ai.github.io/srai"
Changelog = "https://github.com/kraina-ai/srai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Make sure to edit test_optional_dependencies.py:
# add entries to optional packages
# add tests

# pdm add -G osm <library>
osm = ["overpass>=0.7", "pillow>=8.0.0", "beautifulsoup4", "quackosm>=0.16.2"]
# pdm add -G overturemaps <library>
overturemaps = ["overturemaestro>=0.5.0"]
# pdm add -G voronoi <library>
voronoi = [
    "pymap3d>=3.0.0",
    "haversine>=2.0.0",
    "scipy>=1.10.0",
    "spherical-geometry>=1.3.2",
]
# pdm add -G gtfs <library>
gtfs = ["gtfs-kit"]
# pdm add -G plotting <library>
plotting = [
    "folium>=0.14.0",
    "mapclassify>=2.4.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.2.0",
    "plotly>=4.6.0",
    "kaleido<=0.2.1,>=0.2.0",
] # kaleido<=0.2.1 because installation breaks on 0.2.1.post1
# pdm add -G torch <library>
torch = [
    "pytorch-lightning>=2.0.0",
    # Torch 2.2.* is the last oficially supported torch version on macOS x86_64
    "torch<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch",
]
all = ["srai[osm,overturemaps,voronoi,gtfs,plotting,torch]"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
# pdm add -d <library>
dev = ["bumpver", "types-requests"]
# pdm add -dG lint <library>
lint = ["pre-commit", "mypy", "docformatter[tomli]", "ruff"]
# pdm add -dG test <library>
test = [
    "pytest>=8.0.0",
    "tox-pdm>=0.7.2",
    "pytest-mock>=3.3.0",
    "requests-mock>=1.12.1",
    "pytest-check>=2.3.1",
    "pytest-parametrization>=2022.2.1",
    "pytest-doctestplus>=1.2.1",
    "six>=1.9.0",
    "pytest-snapshot>=0.9.0",
]
# pdm add -dG visualization <library>
visualization = ["matplotlib", "lonboard", "pydeck", "pypalettes", "contextily", "seaborn"]
# pdm add -dG docs <library>
docs = [
    "mkdocs",
    "mkdocs-material[imaging]",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "ipykernel",
    "mkdocs-gen-files",
    "mkdocs-awesome-pages-plugin",
    "mike>=2",
    "scikit-learn>=1.2.0",
    "umap-learn",
    "xgboost",
]
# performance = ["scalene"]
license = ["licensecheck==2024.3", "pipdeptree"]

[tool.pdm.scripts]
post_install = "pre-commit install"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["old"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "I",   # isort
    "B",   # flake8-bugbear
    "NPY", # NumPy
    "YTT", # flake8-2020
    "Q",   # flake8-quotes
    "PLE",
    "PLW", # pylint (add "PLR" in the future)
    "PIE", # misc lints
    "TID", # tidy imports
    "ISC", # implicit string concatenation
    "TCH", # type-checking imports
    # "N",            # pep8-naming
    # "ANN",          # flake8-annotations
]
ignore = ["D212", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[tool.docformatter]
syntax = 'google'
black = true
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
# force-wrap = false # uncomment after https://github.com/PyCQA/docformatter/issues/68 is resolved
tab-width = 4
blank = false
pre-summary-newline = true
close-quotes-on-newline = true
wrap-one-line = true

[tool.bumpver]
current_version = "0.9.7"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "chore(CI/CD): bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"srai/__init__.py" = ['^__version__ = "{version}"$']
"CITATION.cff" = ['^version: {version}$']

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
log_cli = true

[tool.licensecheck]
using = "requirements"
zero = true
ignore_licenses = ["UNKNOWN"]
ignore_packages = [
    'srai',                     # skip self
    'scalene',                  # uses Apache-2.0 license, takes time to analyse
    'docformatter',             # uses MIT license, has mismatched license in analysis
    'gtfs-kit',                 # uses MIT license, has mismatched license in analysis
    'pymap3d',                  # uses BSD-2 license, has mismatched license in analysis
    'mkdocs-jupyter',           # uses Apache-2.0 license, has mismatched license in analysis
    'pycountry',                # uses LGPLv2, has mismatched license in analysis
    'referencing',              # uses MIT license, has mismatched license in analysis
    'nvidia-cublas-cu11',       # uses NVIDIA license
    'nvidia-cuda-cupti-cu11',   # uses NVIDIA license
    'nvidia-cuda-nvrtc-cu11',   # uses NVIDIA license
    'nvidia-cuda-runtime-cu11', # uses NVIDIA license
    'nvidia-cudnn-cu11',        # uses NVIDIA license
    'nvidia-cufft-cu11',        # uses NVIDIA license
    'nvidia-curand-cu11',       # uses NVIDIA license
    'nvidia-cusolver-cu11',     # uses NVIDIA license
    'nvidia-cusparse-cu11',     # uses NVIDIA license
    'nvidia-nccl-cu11',         # uses NVIDIA license
    'nvidia-nvtx-cu11',         # uses NVIDIA license
    'nvidia-cublas-cu12',       # uses NVIDIA license
    'nvidia-cuda-cupti-cu12',   # uses NVIDIA license
    'nvidia-cuda-nvrtc-cu12',   # uses NVIDIA license
    'nvidia-cuda-runtime-cu12', # uses NVIDIA license
    'nvidia-cudnn-cu12',        # uses NVIDIA license
    'nvidia-cufft-cu12',        # uses NVIDIA license
    'nvidia-curand-cu12',       # uses NVIDIA license
    'nvidia-cusolver-cu12',     # uses NVIDIA license
    'nvidia-cusparse-cu12',     # uses NVIDIA license
    'nvidia-nccl-cu12',         # uses NVIDIA license
    'nvidia-nvtx-cu12',         # uses NVIDIA license
    'nvidia-nvjitlink-cu12',    # uses NVIDIA license
    'mkl',                      # Github Action artifact, uses Intel Simplified Software License
    'mkdocs-autorefs',          # uses ISC License, has mismatched license in analysis
]
